--- a/cypress/fixtures/yaml/python_app_rules.yaml
+++ b/cypress/fixtures/yaml/python_app_rules.yaml
@@ -1,16 +1,23 @@
-- message: python sample rule 001
-  ruleID: python-sample-rule-001
-  description: CUSTOM RULE FOR PYTHON
+
+- ruleID: python-sample-rule-001
+  message: python sample rule 001
+  description: sample-rule-1 - this should appear as an issue
+  category: potential
+  effort: 1
   when:
     python.referenced:
       pattern: "hello_world"
-- message: python sample rule 002
-  ruleID: python-sample-rule-002
+- ruleID: python-sample-rule-002
+  message: python sample rule 002
+  description: sample-rule-2 - this should appear as an issue
+  category: potential
+  effort: 5
   when:
     python.referenced:
       pattern: "speak"
-- message: python sample rule 003
-  ruleID: python-sample-rule-003
+- ruleID: python-sample-rule-003
+  message: python sample rule 003
+  category: potential
   when:
     python.referenced:
       pattern: "create_custom_resource_definition"
