UI reporting with bug count and IDs
Signed-off-by: Shveta Sachdeva <sshveta@redhat.com>

--- a/package.json
+++ b/package.json
@@ -52,5 +52,9 @@
     },
     "engines": {
         "node": ">=20.17"
+    },
+    "devDependencies": {
+        "mochawesome-merge": "^5.0.0",
+        "table": "^6.9.0"
     }
 }
