--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
         "@testing-library/cypress": "^10.0.1",
         "@types/node": "^20.1.0",
         "cy-verify-downloads": "^0.1.13",
+        "cypress": "^13.13.3",
         "cypress-downloadfile": "^1.2.4",
         "cypress-fail-fast": "^7.1.1",
         "cypress-file-upload": "^5.0.8",
